test/errors/type/float/tofloat.yasl
echo mt.lookup(0.0, .tofloat)(1)
